--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.ts",
   "scripts": {
     "start": "nodemon src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
     "body-parser": "^1.19.1",
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
     "@types/mysql": "^2.15.20",
     "@types/node": "^17.0.13",
     "nodemon": "^2.0.15",
