--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es6",
+    "resolveJsonModule": true,
     "rootDir": "./",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "paths": {},
   }
 }
